# angina

./: CMakeLists.txt  main.cpp
backend/: CMakeLists.txt
backend/sdl/: CMakeLists.txt
backend/sdl/init/: SDLVideoLifecycleManager.cpp  SDLVideoLifecycleManager.h
backend/sdl/input/: SDLInputEventManager.cpp  SDLInputEventManager.h
backend/sdl/rendering/: SDLRenderer.cpp  SDLRenderer.h
backend/sdl/resources/: SDLCPUTexture.cpp  SDLCPUTexture.h  SDLCPUTextureResourceLoader.cpp  SDLCPUTextureResourceLoader.h  SDLCPUTextureResourceLoaderAsync.cpp  SDLCPUTextureResourceLoaderAsync.h  SDLCPUTextureResourceLoaderHyperAsync.cpp  SDLCPUTextureResourceLoaderHyperAsync.h  SDLGPUTexture.cpp  SDLGPUTexture.h  SDLGPUTextureLoader.h
backend/sdl/ui/: SDLWindow.cpp  SDLWindow.h
cmake_helpers/: ProjectOptions.cmake
cmake_helpers/find_modules/: FindSDL2.cmake
core/: CMakeLists.txt
core/datastructures/: CMakeLists.txt  FreeList.h  RWProtected.h
core/error/: CMakeLists.txt  Errors.h
core/identity/: CMakeLists.txt  Id.h  IdGenerator.cpp  IdGenerator.h
core/time/: Stopwatch.cpp  Stopwatch.h  Time.h  WaitableTimer.cpp  WaitableTimer.h
core/units/: CMakeLists.txt  Units.hpp  Units.ixx
engine/: CMakeLists.txt  Engine.cpp  Engine.h  EngineState.h
enginev3/: Engine.cpp  Engine.h  EngineConfig.h  EngineState.cpp  EngineState.h
enginev3/init/: ISubsystemLifecycleManager.h  SDLVideoLifecycleManager.cpp  SDLVideoLifecycleManager.h  SubsystemLifecycleManagers.cpp  SubsystemLifecycleManagers.h
examples/chess/chess-engine/: ChessMoveManager.cpp
platform/: CMakeLists.txt
platform/error/: CMakeLists.txt  Errors.ixx
platform/init/: CMakeLists.txt  ISubsystemLifecycleManager.h  SubsystemLifecycleManagers.cpp  SubsystemLifecycleManagers.h
platform/input/: BaseInputEventManager.cpp  BaseInputEventManager.h  BaseInputEventSnapshot.cpp  BaseInputEventSnapshot.h  CMakeLists.txt  IInputEventManager.h  IInputEventSnapshot.h  SDLInputEventManager.cpp  SDLInputEventManager.h  SDLInputEventSnapshot.h
platform/logging/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  Logger.h
platform/rendering/: CMakeLists.txt  Renderer.h  TextureTransferer.h
platform/resources/: CMakeLists.txt  CPUTexture.h  CPUTextureHandle.h  CPUTextureResourceLoader.h  CPUTextureResourceLoaderWorker.cpp  CPUTextureResourceLoaderWorker.h  GPUTexture.h  GPUTextureHandle.h  GPUTextureLoader.cpp  GPUTextureLoader.h  IResource.h  IResourceLoader.h  IResourceManager.h  ITexture.h  ResourceHandle.h  TextureHandle.h  TextureResourceLoader.h  TextureTransferer.h
platform/system/: CMakeLists.txt  Updateable.h
platform/thread/: ThreadUtils.cpp  ThreadUtils.h
platform/time/: CMakeLists.txt  FramePacer.cpp  FramePacer.h  FrameTimer.h  Stopwatch.cpp  Stopwatch.h  WaitableTimer.cpp  WaitableTimer.h
platform/ui/: CMakeLists.txt
platform/ui/window/: IWindow.h  WindowConfig.h
tests/: CMakeLists.txt  test_FreeList.cpp  test_something.cpp
tests/helpers/: file.cpp  file.h
tests/platform/: test_BaseInputEventManager.cpp
tests/resources/: test_CPUTextureLoadWorker.cpp  test_GPUTextureLoader.cpp  test_SDLCPUTextureResourceLoader.cpp  test_SDLCPUTextureResourceLoaderAsync.cpp  test_SDLCPUTextureResourceLoaderHyperAsync.cpp
ui/: CMakeLists.txt
ui/window/: BaseWindow.h  IWindow.h  SDLWindow.cpp  SDLWindow.h  WindowConfig.h
zengine/managers/: EventManager.h
